--- a/index.html
+++ b/index.html
@@ -7,18 +7,11 @@
     <title>Web Studio</title>
   </head>
   <body>
-    <!--Page header-->
+    <!--Header-->
     <header>
       <nav>
         <!--Navigation to other pages-->
-        <a href="./index.html">
-          <img
-            src="./images/logo.svg"
-            alt="вебстудия"
-            width="145"
-            height="31"
-          />
-        </a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -31,7 +24,7 @@
         <li><a href="tel:+380961111111">+38 (096) 111-11-11</a></li>
       </ul>
     </header>
-    <!--Main content-->
+    <!--Main-->
     <main>
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
@@ -145,7 +138,7 @@
         </ul>
       </section>
     </main>
-    <!--Page footer-->
+    <!--Footer-->
     <footer>
       <a href="./index.html">
         <img src="./images/webstudio.svg" alt="логотип" width="145" height="31"
