--- a/index.html
+++ b/index.html
@@ -140,9 +140,7 @@
     </main>
     <!--Footer-->
     <footer>
-      <a href="./index.html">
-        <img src="./images/webstudio.svg" alt="логотип" width="145" height="31"
-      /></a>
+      <a href="./index.html">WebStudio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
