--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <!--Navigation to other pages-->
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
 
@@ -63,12 +63,15 @@
             </p>
           </li>
         </ul>
+      </section>
+
+      <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
               src="./images/sitelayout.jpg"
-              alt="верстка"
+              alt="разработчик набирает код"
               width="370"
               height="294"
             />
